--- a/style/header.css
+++ b/style/header.css
@@ -21,7 +21,7 @@ header.fullHeight {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 90%;
+  /* width: 100%; */
 }
 
 .header__nav {
@@ -88,6 +88,7 @@ header.fullHeight {
 .header__navBar a {
   margin-top: 20px;
   font-weight: 600;
+  font-size: 14px;
 }
 
 .header__navBar a:hover {
@@ -95,6 +96,7 @@ header.fullHeight {
 }
 
 .header__navBar a:last-child {
+  white-space: nowrap;
   border: 2px solid #ffffff;
   padding: 5px 15px;
   transition: 0.3s;
@@ -106,7 +108,7 @@ header.fullHeight {
   background: #ffffff;
 }
 
-@media screen and (min-width: 1100px) {
+@media (min-width: 760px) {
   .header__burger {
     display: none;
   }
@@ -124,12 +126,6 @@ header.fullHeight {
     width: auto;
   }
   .header__navBar a {
-    margin: 0 0 0 20px;
-  }
-}
-
-@media screen and (min-width: 1300px) {
-  .header__body {
-    width: 100%;
+    margin: 0 0 0 14px;
   }
 }
